# slick-dataui

./: AI_GUIDELINES.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: db.rs  error.rs  main.rs  persistence.rs  state.rs  table_delegate.rs  ui.rs
src/db/: postgres.rs  sqlite.rs  types.rs
src/ui/: connection_modal.rs  editor.rs  mod.rs  results.rs  sidebar.rs
