[package]
name = "slick-dataui"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.100"
gpui = "0.2.2"
gpui-component = "0.4.0-preview3"
# Optional, for default bundled assets
gpui-component-assets = "0.4.0-preview3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "tls-native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
futures = "0.3"
async-trait = "0.1"
rfd = "0.15"
once_cell = "1.20"
